--- a/produtos.html
+++ b/produtos.html
@@ -47,7 +47,7 @@
 
         <footer>
             <img src="img/logo-branco.png" alt="">
-            <p class="copyright"> &copy; Copyright Barbearia Alura - 2023 por kaue nantes </p>
+            <p class="copyright"> &copy; Copyright Barbearia Alura - 2023 por Kaue Nantes </p>
         </footer>
        
     </body>
